--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/vomarchuk/Profit-calculator.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Volodymyr Marchuk <mr.volodymyr.marchuk@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/vomarchuk/Profit-calculator/issues"
